--- a/README.rdoc
+++ b/README.rdoc
@@ -10,9 +10,15 @@ Simple photo sharing app that allows users to:
 
 Some sample users that can be used for login:
 
-* Last name: Bieber  Password: Justin
-* Last name: Hilton  Password: Paris
-* Last name: Cyrus  Password: Miley
-* Last name: Obama  Password: Barrack
-* Last name: Claus  Password: Santa
-* Last name: Ousterhout  Password: John
+* Last name: Bieber  
+  Password: Justin
+* Last name: Hilton  
+  Password: Paris
+* Last name: Cyrus  
+  Password: Miley
+* Last name: Obama  
+  Password: Barrack
+* Last name: Claus  
+  Password: Santa
+* Last name: Ousterhout  
+  Password: John
